[package]
name = "base24"
version = "0.3.0"
authors = ["Julian Laubstein <contact@julianlaubstein.de>"]
description = "A simple base24 implementation in Rust"
repository = "https://github.com/sphinxc0re/rust-base24"
license = "MIT"
readme = "README.md"
edition = "2018"

[dev-dependencies]
rand = "0.7.3"

[dependencies]
thiserror = "1.0.11"
